--- a/09-spring-boot-jpa-advanced-mapping/01-jpa-one-to-one-uni/src/main/resources/application.properties
+++ b/09-spring-boot-jpa-advanced-mapping/01-jpa-one-to-one-uni/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 spring.main.banner-mode=off
 logging.level.root=warn
+
+logging.level.org.hibernate.SQL=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
